Kubernetes/appsusingIngress/yamlFiles/timer-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timer-deployment
  labels:
    app: timetimer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: timer
  template:
    metadata:
      labels:
        app: timer
    spec:
      containers:
      - name: my-timer
        image: silversoul007/learn-ingress:timer
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: timer-service
spec:
  type: NodePort
  selector:
    app: timer
  ports:
    - port: 5001
      targetPort: 3001
      nodePort: 30008
